--- a/app.css
+++ b/app.css
@@ -21,3 +21,11 @@ li {
 .price {
   padding-right: 50px;
 }
+
+.ng-invalid.ng-dirty {
+  border-color: #FA787E;
+}
+
+.ng-valid.ng-dirty {
+  border-color: #78FA89;
+}
